fix: text wrap and responsiveness

--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@ main {
 }
 
 .big-story-card h1 {
-  font-size: 24px;
+  font-size: 28px;
   line-height: 38.3px;
   text-align: left;
   padding: 0 30px;
@@ -517,7 +517,6 @@ main {
 .big-story-card p,
 .date {
   font-family: "Raleway", sans-serif;
-  font-size: 15.34px;
   line-height: 28.8px;
   font-weight: 500;
 }
@@ -527,6 +526,8 @@ main {
   padding: 30px;
   color: #666666;
   margin: 0;
+  font-size: 20px;
+  text-wrap: wrap;
 }
 
 .date {
@@ -538,10 +539,12 @@ main {
   top: -30px;
   left: 40px;
   z-index: 100;
+  font-size: 15.34px;
 }
 
 .big-story-card .date {
   background-color: #3cd8e8;
+  left: 30px;
 }
 
 .small-story-cards {
@@ -557,6 +560,8 @@ main {
 }
 
 .small-story-card img {
+  width: 100%;
+  height: auto;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
@@ -579,6 +584,10 @@ main {
   background-color: #5d58f0;
 }
 
+.small-story-card:last-child h4 {
+  padding: 0 60px 0 40px;
+}
+
 .stories button {
   width: 197px;
   height: auto;
@@ -594,7 +603,7 @@ main {
   font-weight: bold;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .big-story-card {
     display: none;
   }
@@ -616,9 +625,12 @@ main {
     row-gap: 20px;
   }
 
+  .stories h1 {
+    font-size: 26px;
+  }
+
   .story-container {
     grid-template-columns: auto;
-    
   }
 
   .small-story-cards {
@@ -632,8 +644,6 @@ main {
   .small-story-card img {
     border-top-left-radius: 9.53px;
     border-top-right-radius: 9.53px;
-    width: 100%;
-    height: auto;
   }
 
   .small-story-card h4,
@@ -643,6 +653,10 @@ main {
   }
 
   .small-story-card h4 {
+    padding: 0 20px;
+  }
+
+  .small-story-card:last-child h4 {
     padding: 0 20px;
   }
 
@@ -658,4 +672,48 @@ main {
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .date {
+    scale: 0.7;
+    left: 2px;
+  }
+
+  .small-story-card h4 {
+    font-size: 8px;
+    padding: 0 8px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1240px) {
+  .big-story-card h1 {
+    font-size: 24px;
+  }
+
+  .big-story-card p,
+  .date,
+  .small-story-card h4 {
+    font-size: 14px;
+  }
+
+  .small-story-card h4 {
+    padding: 0 20px;
+    margin-top: -10px;
+  }
+
+  .small-story-card:last-child h4 {
+    padding: 0 25px;
+  }
+
+  .small-story-card .date {
+    top: -30px;
+    left: 15px;
+  }
+
+  .big-story-card .date {
+    top: -30px;
+    left: 25px;
+  }
+}
+
 /* STORIES */
